--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ i{
 #btn{
     height: 100%;
     width: 20%;
-    background: rgb(208, 99, 32);
+    background: #d06320;
     display: inline;
     border: none;
     outline: none !important;
